# Spec-Bench

./: .gitignore  main.py  my_eval.sh  n_eval.sh  pyproject.toml
data/model_bigram/: bigram_mapping.json
evaluation/: clasp_backup.py  equal.py  eval.py  inference_casspec.py  inference_casspec_.py  inference_clasp.py  inference_lookahead.py  inference_pld.py  inference_recycling.py  inference_swift.py  inference_swift_pld.py  speed.py
model/casspec/: modeling_llama.py  utils.py
model/casspec_/: utils.py
model/clasp/: modeling_llama.py  utils.py
model/myswift/: utils.py
model/pld/: model_bigram.py  pld.py
model/rest/datastore/: datastore.sh
model/sps/: decoding.py
model/swift/: modeling_llama.py  utils.py
test/: extracted_log_data.csv  inspec.ipynb
