[project]
name = "spec-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==0.21.0",
    "anthropic==0.5.0",
    "bayesian-optimization==1.5.1",
    "datasets==3.4.1",
    "fschat==0.2.31",
    "gradio==3.50.2",
    "maturin==0.12",
    "openai==0.28.0",
    "pip>=25.0.1",
    "protobuf==3.19.0",
    "ray>=2.44.1",
    "sentencepiece==0.2.0",
    "torch>=2.1.1",
    "transformers==4.37.1",
]
